--- a/app/views/static/home.html.haml
+++ b/app/views/static/home.html.haml
@@ -41,7 +41,7 @@
         .about-testimonial-author Newsletter
       %br
       %br
-      %iframe{src: "http://localhost:3000/subscribe", height: "410", width: "340", frameborder: "0"}
+      %iframe{src: "http://joshsoftware.com/subscribe", height: "410", width: "340", frameborder: "0"}
     .col-md-4
       .about-testimonial.boxed-style.about-flexslider
         %section.slider
