--- a/app/views/static/_team.html.haml
+++ b/app/views/static/_team.html.haml
@@ -35,5 +35,5 @@
             .text-center
               = render "member_data", public_profile: "{{public_profile}}"
           .container
-            %p {{employee_detail.description}}
+            %p {{{employee_detail.description}}}
   {{/team_members}}
