--- a/src/views/index.jade
+++ b/src/views/index.jade
@@ -1,3 +1,18 @@
 extends ./layouts/bootstrap.jade
 
 block content
+  section.section-home.section-banner
+
+  section.section-home.section-expertise
+    h1.section-heading Domain Expertise
+
+  section.section-home.section-work
+    h1.section-heading What We Do?
+
+  section.section-home.section-clients
+    h1.section-heading Our Top Clients
+
+  section.section-home.section-about
+    h1.section-heading About Us
+
+  section.section-home.section-contact
