--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,10 +1,8 @@
 /* Fonts and Icons */
 @import "fonts";
 @import "icon";
-
 /* Core Variables and Mixins */
 @import "core";
-
 /* Bootstrap v4.1.1 */
 @import "../../node_modules/bootstrap/scss/root";
 @import "../../node_modules/bootstrap/scss/reboot";
@@ -38,7 +36,11 @@
 @import "../../node_modules/bootstrap/scss/carousel";
 @import "../../node_modules/bootstrap/scss/utilities";
 @import "../../node_modules/bootstrap/scss/print";
-
 /* Common Styles */
 @import "header";
 @import "shared";
+@import "footer";
+/* pages */
+@import "pages/home";
+/* offcanvas */
+@import "offcanvas";
