--- a/src/views/inc/header.jade
+++ b/src/views/inc/header.jade
@@ -1,16 +1,16 @@
 header.josh-header.fixed-top
   .container
     nav.navbar.navbar-expand-lg.josh-navbar
-      a.navbar-brand(href='#')
+      a.navbar-brand(href='javascript:void(0);')
         img(src='./images/josh-logo.svg', alt='')
       button.navbar-toggler.p-0.border-0(type='button', data-toggle='offcanvas')
         i.icon-bars
       #joshOffcanvasNavbar.navbar-collapse.offcanvas-collapse
         .navbar-nav.ml-auto
-          a.nav-item.nav-link(href='#') Innovation
-          a.nav-item.nav-link(href='#') Services
-          a.nav-item.nav-link(href='#') Technologies
-          a.nav-item.nav-link(href='#') Industries
-          a.nav-item.nav-link(href='#') Company
-          a.nav-item.nav-link.nav-offcanvas-link(href='#') Contact Us
-          a.nav-item.nav-link.nav-offcanvas-link(href='#') Blog
+          a.nav-item.nav-link(href='javascript:void(0);') Innovation
+          a.nav-item.nav-link(href='javascript:void(0);') Services
+          a.nav-item.nav-link(href='javascript:void(0);') Technologies
+          a.nav-item.nav-link(href='javascript:void(0);') Industries
+          a.nav-item.nav-link(href='javascript:void(0);') Company
+          a.nav-item.nav-link.nav-offcanvas-link(href='javascript:void(0);') Contact Us
+          a.nav-item.nav-link.nav-offcanvas-link(href='javascript:void(0);') Blog
