--- a/src/views/inc/footer.jade
+++ b/src/views/inc/footer.jade
@@ -2,7 +2,7 @@ footer.josh-footer
   .container
     .row
       .col-lg-6.col-md-12
-        .about-wrap
+        .info-wrap
           h4 Josh Software
           p Josh stands for enthusiasm and passion. We believe Programming is an Art and build Innovative Web Based Applications on an Open Source framework for our world-wide clientele.
       .col-lg-6.col-md-12
