--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -46,6 +46,7 @@ $gray-96: #F4F4F4; // black 4%
 //$green:   #28a745 !default;
 //$teal:    #20c997 !default;
 //$cyan:    #17a2b8 !default;
+$olivine:    #95BA75;
 
 //$colors: () !default;
 //$colors: map-merge((
@@ -65,7 +66,7 @@ $gray-96: #F4F4F4; // black 4%
 //), $colors);
 
 //$primary:       $blue !default;
-//$secondary:     $gray-600 !default;
+$secondary:     $gray-20;
 //$success:       $green !default;
 //$info:          $cyan !default;
 //$warning:       $yellow !default;
@@ -73,17 +74,17 @@ $gray-96: #F4F4F4; // black 4%
 //$light:         $gray-100 !default;
 //$dark:          $gray-800 !default;
 
-//$theme-colors: () !default;
-//$theme-colors: map-merge((
+$theme-colors: ();
+$theme-colors: map-merge((
 //  "primary":    $primary,
-//  "secondary":  $secondary,
+  "secondary":  $secondary,
 //  "success":    $success,
 //  "info":       $info,
 //  "warning":    $warning,
 //  "danger":     $danger,
 //  "light":      $light,
 //  "dark":       $dark
-//), $theme-colors);
+), $theme-colors);
 // stylelint-enable
 
 // Set a specific jump point for requesting color jumps
