--- a/src/styles/pages/_home.scss
+++ b/src/styles/pages/_home.scss
@@ -37,5 +37,94 @@
 }
 
 .section-contact {
+  background: transparent url("../images/bg-contact.png") no-repeat top right;
+  background-size: cover;
   min-height: rem(425px);
+  padding: rem(142px 0 110px);
+
+  @include media-breakpoint-down(md) {
+    background: transparent none;
+    padding: rem(56px 0);
+  }
+
+  .contact-wrap{
+    text-align: center;
+
+    p{
+      color: $gray-40;
+      font-size: rem(32px);
+      line-height: rem(39px);
+      font-weight: 300;
+      text-transform: uppercase;
+      letter-spacing: rem(0.92233px);
+      margin: rem(0 0 48px);
+
+      @include media-breakpoint-down(sm) {
+        font-size: rem(20px);
+        line-height: rem(24px);
+      }
+    }
+
+    @include media-breakpoint-down(md) {
+      margin: rem(0 0 56px);
+
+      p{
+        margin: 0;
+      }
+
+      .btn-secondary {
+        display: none;
+      }
+    }
+  }
+
+  .contact-banner{
+    display: none;
+
+    @include media-breakpoint-down(md) {
+      background: transparent url("../images/bg-contact.png") no-repeat top right;
+      background-size: cover;
+      display: block;
+      height: rem(217px);
+      margin: rem(0 0 45px);
+    }
+  }
+
+  .contact-number {
+    display: none;
+
+    @include media-breakpoint-down(md) {
+      display: block;
+      text-align: center;
+
+      h6 {
+        color: $gray-40;
+        font-size: rem(32px);
+        line-height: rem(39px);
+        font-weight: 300;
+        text-transform: uppercase;
+        letter-spacing: rem(0.92233px);
+        margin: rem(0 0 6px);
+
+        @include media-breakpoint-down(sm) {
+          font-size: rem(20px);
+          line-height: rem(24px);
+        }
+      }
+
+      p{
+        margin: 0;
+        color: $gray-40;
+        font-size: rem(16px);
+        line-height: rem(22px);
+        font-weight: 300;
+
+        i{
+          font-size: rem(24px);
+          color: $olivine;
+          padding-right: rem(12px);
+        }
+      }
+    }
+  }
 }
