--- a/src/views/index.jade
+++ b/src/views/index.jade
@@ -15,6 +15,57 @@ block content
   section.section-home.section-clients
     .container
       h1.section-heading Our Top Clients
+      ul.list-unstyled.list-client
+        li
+          a(href="javascript:void(0);")
+            img.img-fluid(src="../images/pediatric_logo.png", alt="")
+        li
+          a(href="javascript:void(0);")
+            img.img-fluid(src="../images/brandscope_logo.png", alt="")
+        li
+          a(href="javascript:void(0);")
+            img.img-fluid(src="../images/druva_logo.png", alt="")
+        li
+          a(href="javascript:void(0);")
+            img.img-fluid(src="../images/dealsignal_logo.png", alt="")
+        li
+          a(href="javascript:void(0);")
+            img.img-fluid(src="../images/ffd_logo.png", alt="")
+        li
+          a(href="javascript:void(0);")
+            img.img-fluid(src="../images/ffd_logo.png", alt="")
+        li
+          a(href="javascript:void(0);")
+            img.img-fluid(src="../images/dealsignal_logo.png", alt="")
+        li
+          a(href="javascript:void(0);")
+            img.img-fluid(src="../images/brandscope_logo.png", alt="")
+        li
+          a(href="javascript:void(0);")
+            img.img-fluid(src="../images/pediatric_logo.png", alt="")
+        li
+          a(href="javascript:void(0);")
+            img.img-fluid(src="../images/druva_logo.png", alt="")
+        li
+          a(href="javascript:void(0);")
+            img.img-fluid(src="../images/druva_logo.png", alt="")
+        li
+          a(href="javascript:void(0);")
+            img.img-fluid(src="../images/pediatric_logo.png", alt="")
+        li
+          a(href="javascript:void(0);")
+            img.img-fluid(src="../images/ffd_logo.png", alt="")
+        li
+          a(href="javascript:void(0);")
+            img.img-fluid(src="../images/dealsignal_logo.png", alt="")
+        li
+          a(href="javascript:void(0);")
+            img.img-fluid(src="../images/brandscope_logo.png", alt="")
+
+      .link-box
+        a(href="javascript:void(0);")
+          i.align-middle.icon-arrow-right
+          | View Testimonials
 
   section.section-home.section-about
     .container
