--- a/src/views/layouts/bootstrap.jade
+++ b/src/views/layouts/bootstrap.jade
@@ -9,6 +9,7 @@ html(lang="en")
       meta(content='Ruby on Rails experts in India and we believe that programming is an Art', name='description')
       // Favicons
       link(rel='apple-touch-icon-precomposed', href='apple-touch-icon-precomposed.png')
+      link(rel='icon', href='favicon.ico')
       title Technology Expert Solution Providers in India | Josh Software Private Limited
       link(rel='stylesheet', href="styles/main.css")
       link(href='https://fonts.googleapis.com/css?family=Lato:100,300,400,700', rel='stylesheet')
