--- a/src/views/index.jade
+++ b/src/views/index.jade
@@ -18,49 +18,49 @@ block content
       ul.list-unstyled.list-client
         li
           a(href="javascript:void(0);")
-            img.img-fluid(src="../images/pediatric_logo.png", alt="")
+            img.img-fluid(src="./images/pediatric_logo.png", alt="")
         li
           a(href="javascript:void(0);")
-            img.img-fluid(src="../images/brandscope_logo.png", alt="")
+            img.img-fluid(src="./images/brandscope_logo.png", alt="")
         li
           a(href="javascript:void(0);")
-            img.img-fluid(src="../images/druva_logo.png", alt="")
+            img.img-fluid(src="./images/druva_logo.png", alt="")
         li
           a(href="javascript:void(0);")
-            img.img-fluid(src="../images/dealsignal_logo.png", alt="")
+            img.img-fluid(src="./images/dealsignal_logo.png", alt="")
         li
           a(href="javascript:void(0);")
-            img.img-fluid(src="../images/ffd_logo.png", alt="")
+            img.img-fluid(src="./images/ffd_logo.png", alt="")
         li
           a(href="javascript:void(0);")
-            img.img-fluid(src="../images/ffd_logo.png", alt="")
+            img.img-fluid(src="./images/ffd_logo.png", alt="")
         li
           a(href="javascript:void(0);")
-            img.img-fluid(src="../images/dealsignal_logo.png", alt="")
+            img.img-fluid(src="./images/dealsignal_logo.png", alt="")
         li
           a(href="javascript:void(0);")
-            img.img-fluid(src="../images/brandscope_logo.png", alt="")
+            img.img-fluid(src="./images/brandscope_logo.png", alt="")
         li
           a(href="javascript:void(0);")
-            img.img-fluid(src="../images/pediatric_logo.png", alt="")
+            img.img-fluid(src="./images/pediatric_logo.png", alt="")
         li
           a(href="javascript:void(0);")
-            img.img-fluid(src="../images/druva_logo.png", alt="")
+            img.img-fluid(src="./images/druva_logo.png", alt="")
         li
           a(href="javascript:void(0);")
-            img.img-fluid(src="../images/druva_logo.png", alt="")
+            img.img-fluid(src="./images/druva_logo.png", alt="")
         li
           a(href="javascript:void(0);")
-            img.img-fluid(src="../images/pediatric_logo.png", alt="")
+            img.img-fluid(src="./images/pediatric_logo.png", alt="")
         li
           a(href="javascript:void(0);")
-            img.img-fluid(src="../images/ffd_logo.png", alt="")
+            img.img-fluid(src="./images/ffd_logo.png", alt="")
         li
           a(href="javascript:void(0);")
-            img.img-fluid(src="../images/dealsignal_logo.png", alt="")
+            img.img-fluid(src="./images/dealsignal_logo.png", alt="")
         li
           a(href="javascript:void(0);")
-            img.img-fluid(src="../images/brandscope_logo.png", alt="")
+            img.img-fluid(src="./images/brandscope_logo.png", alt="")
 
       .link-box
         a(href="javascript:void(0);")
@@ -70,7 +70,28 @@ block content
   section.section-home.section-about
     .container
       h1.section-heading About Us
-
+      .about-wrap
+        .stats-box
+          .stats
+            h4 +11 years
+            p Industry Experience
+          .stats
+            h4 13
+            p Countries
+          .stats
+            h4 96
+            p Clients
+        .about-banner
+        .stats-box
+          .stats
+            h4 35+
+            p Mentored and created business model for start-ups
+          .stats
+            h4 7
+            p Technology Partners got funding
+          .stats
+            h4 60%
+            p Clients that are working with us for more than 5 years
   section.section-home.section-contact
     .container
       .row
