Added: Technologies Page Copy

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -47,6 +47,7 @@ $gray-96: #F4F4F4; // black 4%
 //$teal:    #20c997 !default;
 //$cyan:    #17a2b8 !default;
 $olivine:    #95BA75;
+$chambray:    #495380;
 
 //$colors: () !default;
 //$colors: map-merge((
