--- a/src/views/inc/header.jade
+++ b/src/views/inc/header.jade
@@ -9,7 +9,7 @@ header.josh-header.fixed-top
         .navbar-nav.ml-auto
           a.nav-item.nav-link(href='javascript:void(0);') Innovation
           a.nav-item.nav-link(href='javascript:void(0);') Services
-          a.nav-item.nav-link(href='javascript:void(0);') Technologies
+          a.nav-item.nav-link(href='technologies.html') Technologies
           a.nav-item.nav-link(href='javascript:void(0);') Industries
           a.nav-item.nav-link(href='javascript:void(0);') Company
           a.nav-item.nav-link.nav-offcanvas-link(href='javascript:void(0);') Contact Us
