Added: About Us section ui

--- a/src/views/index.jade
+++ b/src/views/index.jade
@@ -81,7 +81,10 @@ block content
           .stats
             h4 96
             p Clients
+          .stats.d-none.d-lg-block
+            a.btn.btn-outline-white(href="javascript:void(0);") Company
         .about-banner
+          img.img-fluid(src="./images/about.png", alt="")
         .stats-box
           .stats
             h4 35+
@@ -92,13 +95,16 @@ block content
           .stats
             h4 60%
             p Clients that are working with us for more than 5 years
+          .stats.d-none.d-lg-block
+            a.btn.btn-outline-white(href="javascript:void(0);") Our Team
+
   section.section-home.section-contact
     .container
       .row
         .col-lg-6.col-md-12
           .contact-wrap
             p Looking for an <br>expert technical partner?
-            a.btn.btn-secondary(href="javascript:void(0);") Contact Us
+            a.btn.btn-gray(href="javascript:void(0);") Contact Us
     .contact-banner
     .contact-number
       .container
