--- a/src/styles/pages/_home.scss
+++ b/src/styles/pages/_home.scss
@@ -60,10 +60,10 @@
 
     }
   }
-}
 
-.section-banner {
-  background-color: #283047;
+  .section-banner {
+    background-color: #283047;
+  }
 }
 
 .section-expertise {
@@ -135,10 +135,18 @@
 
   .section-heading {
     margin: 0 0 rem(30px);
+
+    @include media-breakpoint-down(md) {
+      margin: 0 0 rem(50px);
+    }
   }
 
   .about-wrap{
     @extend .d-flex;
+
+    @include media-breakpoint-down(md) {
+      @include flex-direction(column);
+    }
   }
 
   .stats-box{
@@ -146,12 +154,22 @@
     @extend .flex-column;
     @include justify-content(space-between);
     @include flex(0 0 30%);
-    padding: rem(0 8px);
+    padding: rem(20px 8px);
+
+    @include media-breakpoint-down(md) {
+      @include order(2);
+      padding: rem(0 8px);
+    }
   }
 
   .stats{
     color: $white;
     text-align: center;
+
+    @include media-breakpoint-down(md) {
+      margin: 0 0 rem(32px);
+      opacity: 0.60;
+    }
 
     h4{
       font-size: rem(46px);
@@ -170,10 +188,16 @@
 
   .about-banner{
     @include flex(0 0 40%);
-    height: rem(524px);
-    background: transparent url("../images/about.png") no-repeat center center;
+    text-align: center;
+    //height: rem(524px);
+    //background: transparent url("../images/about.png") no-repeat center center;
     //background-size: 100% auto;
-    box-shadow: 0 0 16px 0 rgba(0,0,0,0.08);
+    //box-shadow: 0 0 16px 0 rgba(0,0,0,0.08);
+
+    @include media-breakpoint-down(md) {
+      @include order(1);
+      margin: 0 0 rem(36px);
+    }
   }
 }
 
