Added: Our Work section ui

--- a/src/views/index.jade
+++ b/src/views/index.jade
@@ -11,7 +11,12 @@ block content
   section.section-home.section-work
     .container
       h1.section-heading What We Do?
-
+      img.img-fluid.img-horizontal(src="./images/our-work.svg", alt="")
+      img.img-fluid.img-vertical(src="./images/our-work-sm.svg", alt="")
+      .link-box.mb-4
+        a.text-white(href="javascript:void(0);")
+          i.align-middle.icon-arrow-right
+          | View Our Work
   section.section-home.section-clients
     .container
       h1.section-heading Our Top Clients
