--- a/src/styles/pages/_home.scss
+++ b/src/styles/pages/_home.scss
@@ -61,7 +61,7 @@
     }
   }
 
-  .section-banner {
+  &.section-banner {
     background-color: #283047;
   }
 }
@@ -71,7 +71,108 @@
 }
 
 .section-work {
+  min-height: unset;
   background-color: #62AAAC;
+
+  .section-heading{
+    margin: 0 0 rem(46px);
+  }
+
+  .img-horizontal{
+    display: block;
+
+    @include media-breakpoint-down(md) {
+      display: none;
+    }
+  }
+
+  .img-vertical{
+    display: none;
+
+    @include media-breakpoint-down(md) {
+      width: rem(412px);
+      margin: 0 auto;
+      display: block;
+    }
+
+    @include media-breakpoint-down(sm) {
+      width: rem(320px);
+      margin: 0 auto;
+      display: block;
+    }
+  }
+
+  @-webkit-keyframes rotating /* Safari and Chrome */ {
+    from {
+      -webkit-transform: rotate(0deg);
+      -o-transform: rotate(0deg);
+      transform: rotate(0deg);
+    }
+    to {
+      -webkit-transform: rotate(360deg);
+      -o-transform: rotate(360deg);
+      transform: rotate(360deg);
+    }
+  }
+  @keyframes rotating {
+    from {
+      -ms-transform: rotate(0deg);
+      -moz-transform: rotate(0deg);
+      -webkit-transform: rotate(0deg);
+      -o-transform: rotate(0deg);
+      transform: rotate(0deg);
+    }
+    to {
+      -ms-transform: rotate(360deg);
+      -moz-transform: rotate(360deg);
+      -webkit-transform: rotate(360deg);
+      -o-transform: rotate(360deg);
+      transform: rotate(360deg);
+    }
+  }
+  .rotating {
+    -webkit-animation: rotating 2s linear infinite;
+    -moz-animation: rotating 2s linear infinite;
+    -ms-animation: rotating 2s linear infinite;
+    -o-animation: rotating 2s linear infinite;
+    animation: rotating 2s linear infinite;
+  }
+
+  @-webkit-keyframes rotating1 /* Safari and Chrome */ {
+    from {
+      -webkit-transform: rotate(0deg);
+      -o-transform: rotate(0deg);
+      transform: rotate(0deg);
+    }
+    to {
+      -webkit-transform: rotate(-360deg);
+      -o-transform: rotate(-360deg);
+      transform: rotate(-360deg);
+    }
+  }
+  @keyframes rotating1 {
+    from {
+      -ms-transform: rotate(0deg);
+      -moz-transform: rotate(0deg);
+      -webkit-transform: rotate(0deg);
+      -o-transform: rotate(0deg);
+      transform: rotate(0deg);
+    }
+    to {
+      -ms-transform: rotate(-360deg);
+      -moz-transform: rotate(-360deg);
+      -webkit-transform: rotate(-360deg);
+      -o-transform: rotate(-360deg);
+      transform: rotate(-360deg);
+    }
+  }
+  .rotating1 {
+    -webkit-animation: rotating1 2s linear infinite;
+    -moz-animation: rotating1 2s linear infinite;
+    -ms-animation: rotating1 2s linear infinite;
+    -o-animation: rotating1 2s linear infinite;
+    animation: rotating1 2s linear infinite;
+  }
 }
 
 /* Section Client */
@@ -189,10 +290,6 @@
   .about-banner{
     @include flex(0 0 40%);
     text-align: center;
-    //height: rem(524px);
-    //background: transparent url("../images/about.png") no-repeat center center;
-    //background-size: 100% auto;
-    //box-shadow: 0 0 16px 0 rgba(0,0,0,0.08);
 
     @include media-breakpoint-down(md) {
       @include order(1);
